# HardwareAgents

./: README.md  bun.lockb  package.json  todo.md
app/: page.tsx
app/search/: page.tsx
backend/: .env.local  api.py  main.py  pyproject.toml  todo.md
components/: DronePreferencesForm.tsx  FPVCustomNode.tsx  MarketResearchForm.tsx  Quiz.tsx  SearchBar.tsx  UserAnswers.tsx  fpvSchematic.tsx
frontend/: bun.lockb  package.json  todo.md  tsconfig.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/api/ideas/: route.ts
frontend/app/api/parts/: route.ts
frontend/app/search/: page.tsx
frontend/components/: DronePreferencesForm.tsx  IdeasAgent.tsx  PartsAgent.tsx  SearchBar.tsx  fpvSchematic.tsx
frontend/public/: fpv.json  quizanswers.json
lib/: marketResearchAgent.ts
public/: fpvschematic.json  quiz.json
