[tool.poetry]
name = "hardware_ai"
version = "0.1.0"
description = "Find hardware parts with CrewAI"
authors = ["emil fagerholm <emilfagerholm7@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
crewai = {extras = ["tools"], version = "^0.22.4"}
pydantic = "^2.6.3"
python-dotenv = "^1.0.0"
crewai-tools = "^0.0.15"
flask = "^3.0.2"
flask-cors = "^4.0.0"
agentops = "^0.3.10"
langchain = "^0.1.0"
langchain-community = "^0.0.38"
together = "^0.2.8"
google-search-results = "^2.4.2"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"